feat: cleanup code and implement base64 images from searx